# todo_plugin

./: Cargo.toml  README.md  docker-compose.dev.yaml  run_dev.sh
migration/: check_db.sh  update-entities.yaml  update_entities.sh
migration/src/: lib.rs  m20230514_193002_create_todo.rs
src/: main.rs  plugin.rs  todo.rs
src/entities/: todo.rs
