[package]
name = "llm_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
utoipa = { version = "^3.3", features = ["axum_extras", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
typed-builder = "0.14.0"
url = "2.3.1"
migration = { path = "migration" }
dotenv = "0.15"
sea-orm-migration = "^0.11"
llm-plugin-utils = { git = "https://github.com/corvusPrudens/llm-plugin-utils.git" }

[dependencies.sea-orm]
version = "^0"
features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"]
